--- a/launch.html
+++ b/launch.html
@@ -1,6 +1,6 @@
 <script>
     var win = window.open();
-    var url = "index.html";
+    var url = "/static/index.html";
     var embed = win.document.createElement('embed');
     embed.style.width = "100%";
     embed.style.height = "100%";
