--- a/index.html
+++ b/index.html
@@ -3,16 +3,11 @@
 <head>
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <title>Beluga Network</title>
- <script>
-    var win = window.open ()
-    var url = "/static/index.html"
-    var iframe = win.document.createElement('iframe')
-    iframe.style.width = "100%"
-    iframe.style.height = "100%"
-    iframe.style.border = "none"
-    iframe.src = url
-    win.document.body.appendChild(iframe)
-</script>
+  <script>
+    window.onload = function() {
+      window.location.href = "/static/";
+    };
+  </script>
 </head>
 <body>
 </body>
